@@ -4,42 +4,54 @@ import com.example.demo.entities.Entity;
 import com.example.demo.graphics.Sprite;
 
 
+import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.image.Image;
 import java.awt.*;
+import java.util.ArrayList;
 import java.util.LinkedList;
 
 public class LayerEntity extends Entity {
-    protected LinkedList<Entity> _entity = new LinkedList<>();
+    public ArrayList<Entity> _entity = new ArrayList<>();
 
-    public LayerEntity(int x, int y, Entity ... entity){
-        super(x, y,entity[entity.length - 1].getImg());
+    public LayerEntity(int x, int y, Entity ... entities){
+        super(x, y, entities[0].getImg());
 
-        for(int i=0; i < entity.length; i++){
-           _entity.add(entity[i]);
+        if(entities[0] instanceof Brick){
+            ((Brick) entities[0]).addBelow(entities[1].getImg());
+        }
+        for(int i=0; i < entities.length; i++){
+           _entity.add(entities[i]);
        }
 
     }
 
     public Entity getTopEntity(){
-         return _entity.getLast();
+        return _entity.get(0);
     }
 
     public void Removed(){
         Entity top = getTopEntity();
-
         if(top.isRemoved()){
-            _entity.removeLast();
+            _entity.remove(0);
         }
     }
 
     @Override
     public boolean collide(Entity e) {
-        return false;
+        return getTopEntity().collide(e);
     }
 
     @Override
+    public void render(GraphicsContext gc){
+         getTopEntity().render(gc);
+    }
+
+
+    @Override
     public void update() {
-        Removed();;
+        Removed();
+        this.setImg(this.getTopEntity().getImg());
         getTopEntity().update();
+
     }
 }
